auth-server/scripts/auth-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: auth-server
  replicas: 2
  template:
    metadata:
      labels: 
        name: auth-server
    spec:
      containers:
      - name: auth-server
        image: scaleforce172/auth-server:latest
        ports:
        - containerPort: 8099
