auth-server/scripts/auth-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-server-clusterip
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8099
  selector:
    name: auth-server
