auth-server/scripts/auth-server-ingress-rules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-server
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: auth-server-clusterip
          servicePort: 80
